[tool.poetry]
name = "mr-recommender"
version = "0.1.0"
description = ""
authors = ["edderic@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.0"
openpyxl = "3.0.7"
XlsxWriter = "^3.0.2"
seaborn = "^0.11.2"
gspread="^5.10"
gspread-dataframe="^3.3"
google="^3.0"
pydrive="^1.3"
setuptools="*"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.2.9"
nbstripout = "^0.5.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
